--- a/templates/screen4.html
+++ b/templates/screen4.html
@@ -21,8 +21,8 @@
 									<b>Ballot 1 result: </b> <input type="number" ng-model="pair.pTeam.temp1" id="ballot1pd" min="-126" max="126" placeholder="-126 to +126"></input> <br>
 									<b>Ballot 2 result: </b> <input type="number" ng-model="pair.pTeam.temp2" id="ballot2pd" min="-126" max="126" placeholder="-126 to +126"></input> <br>
 									</p>
-									<input type="button" ng-show = "pair.pTeam.button" value="Submit" id="submit_button" class="button" ng-click="addPoints(pair.pTeam)">
-									<input type="button" ng-show = "!pair.pTeam.button" value="Edit" id="submit_button" class="button" ng-click="editPoints(pair.pTeam)">
+									<input type="button" ng-show = "pair.pTeam.button" value="Submit" id="submit_button" class="btn btn-default" ng-click="addPoints(pair.pTeam)">
+									<input type="button" ng-show = "!pair.pTeam.button" value="Edit" id="submit_button" class="btn btn-default" ng-click="editPoints(pair.pTeam)">
 								</div>
 							</form>
 						</td>
@@ -39,15 +39,15 @@
 									<b>Ballot 1 result: </b> <input type="number" ng-model="pair.dTeam.temp1" id="ballot1pd" min="-126" max="126" placeholder="-126 to +126"></input> <br>
 									<b>Ballot 2 result: </b> <input type="number" ng-model="pair.dTeam.temp2" id="ballot2pd" min="-126" max="126" placeholder="-126 to +126"></input> <br>
 									</p>
-									<input type="button" ng-show = "pair.dTeam.button" value="Submit" id="submit_button" class="button" ng-click="addPoints(pair.dTeam)"> 
-									<input type="button" ng-show = "!pair.dTeam.button" value="Edit" id="submit_button" class="button" ng-click="editPoints(pair.dTeam)">
+									<input type="button" ng-show = "pair.dTeam.button" value="Submit" id="submit_button" class="btn btn-default" ng-click="addPoints(pair.dTeam)"> 
+									<input type="button" ng-show = "!pair.dTeam.button" value="Edit" id="submit_button" class="btn btn-default" ng-click="editPoints(pair.dTeam)">
 								</div>
 							</form>
 						</td>
 					</tr>
 				</tbody>
 			</table>
-		<input type="button" ng-show = "round != 4" class="button" value="Pair Round {{round + 1}}" ng-click="saveRound()" ui-sref="screen5" id="startR_button">
-		<input type="button" ng-show = "round == 4" class="button" value="Show results" ng-click="saveRound()" ui-sref="screen6" id="startFinalButton"">
+		<input type="button" ng-show = "round != 4" class="btn btn-default" value="Pair Round {{round + 1}}" ng-click="saveRound()" ui-sref="screen5" id="startR_button">
+		<input type="button" ng-show = "round == 4" class="btn btn-default" value="Show results" ng-click="saveRound()" ui-sref="screen6" id="startFinalButton"">
 	</div>
 	
