--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -24,7 +24,13 @@
 							<div  class="form-group">
 								<label for="TeamID" class="col-sm-3 control-label"> Team ID: </label>
 								<div class="col-sm-5 col-xs-8">
-									<input type="text" id="teamID{{pair.pTeam.rank}}" ng-model = "pair.pTeam.uniqueID" placeholder="ex. 99999" class="form-control" required></input>
+									<input type="text" id="teamID{{pair.pTeam.rank}}" ng-model = "pair.pTeam.uniqueID" placeholder="ex. 9999" class="form-control" required></input>
+								</div>
+							</div>
+							<div  class="form-group">
+								<label for="TeamImp" class="col-sm-3 control-label"> Team Impermissibles: </label>
+								<div class="col-sm-5 col-xs-8">
+									<input type="text" id="teamImp{{pair.pTeam.rank}}" placeholder="ex. 1023, 1024" class="form-control"></input>
 								</div>
 							</div>
 						</div>
@@ -43,7 +49,13 @@
 							<div  class="form-group">
 								<label for="TeamID" class="col-sm-3 control-label"> Team ID: </label>
 								<div class="col-sm-5 col-xs-8">
-									<input type="text" id="teamID{{pair.dTeam.rank}}" ng-model = "pair.dTeam.uniqueID" placeholder="ex. 99999" class="form-control" required></input>
+									<input type="text" id="teamID{{pair.dTeam.rank}}" ng-model = "pair.dTeam.uniqueID" placeholder="ex. 9999" class="form-control" required></input>
+								</div>
+							</div>
+							<div  class="form-group">
+								<label for="TeamImp" class="col-sm-3 control-label"> Team Impermissibles: </label>
+								<div class="col-sm-5 col-xs-8">
+									<input type="text" id="teamImp{{pair.dTeam.rank}}" placeholder="ex. 1023, 1024" class="form-control"></input>
 								</div>
 							</div>
 						</div>
