--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -16,19 +16,19 @@
 								<label for="TeamNumber" class="col-sm-2 control-label"> Team {{pair.pTeam.rank+1}} </label> 
 							</div>
 							<div id="teamCard" class="form-group">
-								<label for="TeamName" class="col-sm-3 control-label"> Team Name: </label>
+								<label for="TeamName" class="col-sm-3 control-label"> Name: </label>
 								<div class="col-sm-5 col-xs-8">
 									<input type="text" id="teamName{{pair.pTeam.rank}}" ng-model = "pair.pTeam.name" placeholder="ex. Macalester Mock Trial Team" class="form-control" required></input>
 								</div>
 							</div>
 							<div  class="form-group">
-								<label for="TeamID" class="col-sm-3 control-label"> Team ID: </label>
+								<label for="TeamID" class="col-sm-3 control-label"> Number: </label>
 								<div class="col-sm-5 col-xs-8">
 									<input type="text" id="teamID{{pair.pTeam.rank}}" ng-model = "pair.pTeam.uniqueID" placeholder="ex. 9999" class="form-control" required></input>
 								</div>
 							</div>
 							<div  class="form-group">
-								<label for="TeamImp" class="col-sm-3 control-label"> Team Impermissibles: </label>
+								<label for="TeamImp" class="col-sm-3 control-label"> Impermissibles: </label>
 								<div class="col-sm-5 col-xs-8">
 									<input type="text" id="teamImp{{pair.pTeam.rank}}" placeholder="ex. 1023, 1024" class="form-control"></input>
 								</div>
@@ -41,19 +41,19 @@
 								<label for="TeamNumber" class="col-sm-2 control-label"> Team {{pair.dTeam.rank+1}} </label> 
 							</div>
 							<div id="teamCard" class="form-group">
-								<label for="TeamName" class="col-sm-3 control-label"> Team Name: </label>
+								<label for="TeamName" class="col-sm-3 control-label"> Name: </label>
 								<div class="col-sm-5 col-xs-8">
 									<input type="text" id="teamName{{pair.dTeam.rank}}" ng-model = "pair.dTeam.name" placeholder="ex. Macalester Mock Trial Team" class="form-control" required></input>
 								</div>
 							</div>
 							<div  class="form-group">
-								<label for="TeamID" class="col-sm-3 control-label"> Team ID: </label>
+								<label for="TeamID" class="col-sm-3 control-label"> Number: </label>
 								<div class="col-sm-5 col-xs-8">
 									<input type="text" id="teamID{{pair.dTeam.rank}}" ng-model = "pair.dTeam.uniqueID" placeholder="ex. 9999" class="form-control" required></input>
 								</div>
 							</div>
 							<div  class="form-group">
-								<label for="TeamImp" class="col-sm-3 control-label"> Team Impermissibles: </label>
+								<label for="TeamImp" class="col-sm-3 control-label"> Impermissibles: </label>
 								<div class="col-sm-5 col-xs-8">
 									<input type="text" id="teamImp{{pair.dTeam.rank}}" placeholder="ex. 1023, 1024" class="form-control"></input>
 								</div>
