--- a/templates/screen3.html
+++ b/templates/screen3.html
@@ -28,7 +28,7 @@
 								</div>
 							</div>
 							<div  class="form-group">
-								<label for="TeamImp" class="col-sm-3 control-label"> Impermissibles: </label>
+								<label for="TeamImp" class="col-sm-3 control-label"> Impermissible: </label>
 								<div class="col-sm-5 col-xs-8">
 									<input type="text" id="teamImp{{pair.pTeam.rank}}" placeholder="ex. 1023, 1024" class="form-control"></input>
 								</div>
@@ -53,7 +53,7 @@
 								</div>
 							</div>
 							<div  class="form-group">
-								<label for="TeamImp" class="col-sm-3 control-label"> Impermissibles: </label>
+								<label for="TeamImp" class="col-sm-3 control-label"> Impermissible: </label>
 								<div class="col-sm-5 col-xs-8">
 									<input type="text" id="teamImp{{pair.dTeam.rank}}" placeholder="ex. 1023, 1024" class="form-control"></input>
 								</div>
